# ragtag

./: Cargo.toml  README.md
docs/: cli-reference.md  configuration.md  ragtag.example.yaml  tag-syntax.md  task-management.md
src/: error.rs  lib.rs  main.rs
src/cli/: args.rs  mod.rs
src/commands/: config.rs  mod.rs  query.rs  summary.rs
src/config/: loader.rs  mod.rs  schema.rs
src/discovery/: mod.rs  walker.rs
src/edit/: mod.rs  tag_format.rs  writer.rs
src/extensions/: mod.rs
src/extensions/task/: cli.rs  config.rs  filter.rs  mod.rs  models.rs  output.rs  validation.rs
src/extensions/task/commands/: abandon.rs  activate.rs  block.rs  complete.rs  create.rs  deactivate.rs  get.rs  get_attr.rs  list.rs  mod.rs  prioritize.rs  set_attr.rs  set_owner.rs  set_parent.rs  set_priority.rs  set_status.rs  set_time.rs  status_change.rs  summary.rs  time.rs
src/models/: location.rs  mod.rs  tag.rs
src/output/: format.rs  mod.rs
src/parser/: cursor.rs  mod.rs  scanner.rs  tag.rs  value.rs
tests/: cli_tests.rs  parser_integration.rs
tests/fixtures/: .ragtag.yaml  duplicate_ids.md  edge_cases.txt  no_tags.txt  simple_tags.txt  tasks.md
tests/fixtures/multi_file/: a.txt  b.md
